# Shader-Playground

./: Cargo.toml  README.md  demo.glsl
src/: main.rs  vertex.glsl
src/program/: compiler.rs  mod.rs  uniform.rs  watcher.rs
src/render/: gui.rs  mod.rs
