[package]
name = "shader_playground"
version = "0.1.0"
edition = "2018"

[dependencies]
wgpu = { version = "0.17", features = ["spirv"] }
winit = "0.27"
imgui = "0.11"
imgui-wgpu = "0.24"
imgui-winit-support = "0.11"
# naga = { git = "https://github.com/gfx-rs/naga.git", branch = "master", features = ["glsl-in", "wgsl-in", "spv-in", "spv-out"] }
naga = { path = "../naga", features = ["glsl-in", "wgsl-in", "spv-in", "spv-out"] }

shaderc = "0.7"
spirv-reflect = "0.2"

notify = "4"
pollster = "0.2.4"

log = "0.4"
env_logger = "0.9"
